Fixed bug #71660 (array_column behaves incorrectly after foreach by reference)